--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <div class="instragram-wrapper">
             <!--tela principal dividida em dois lados-->
             <div class="instragram-phone">
-                <img src="./imagens/phone.png" alt="imagem celular">
+                <img src="imagens/phone.png" alt="imagem celular">
             </div>
             <div class="instragram-continus">
                     <div class="group">
-                        <img src="./imagens/Instagram-Logo.png" alt="logo instragram" class="instragram-logo">
+                        <img src="imagens/Instagram-Logo.png" alt="logo instragram" class="instragram-logo">
                         <div class="profile-photo">
                             <img src="./imagens/arte-douglas.jpg" alt="imagem do usuário">
                         </div>
