--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <title>CloneInstragram</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="./css/styles.css" rel="stylesheet">
-        <link href="./css/responsividade.css" rel="stylesheet">
+        <link href="css/styles.css" rel="stylesheet">
+        <link href="css/responsividade.css" rel="stylesheet">
     </head>
     <body>
         <div class="instragram-wrapper">
