--- a/index.html
+++ b/index.html
@@ -1,46 +1,49 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-    <head>
-        <title>CloneInstragram</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
-        <link href="css/responsive.css" rel="stylesheet">
-    </head>
-    <body>
-        <div class="instragram-wrapper">
-            <!--tela principal dividida em dois lados-->
-            <div class="instragram-phone">
-                <img src="imagens/phone.png" alt="imagem celular">
-            </div>
-            <div class="instragram-continus">
-                    <div class="group">
-                        <img src="imagens/Instagram-Logo.png" alt="logo instragram" class="instragram-logo">
-                        <div class="profile-photo">
-                            <img src="./imagens/arte-douglas.jpg" alt="imagem do usuário">
-                        </div>
-                        <a href="#" class="instragram-login">Continue como Douglas G.dos Santos</a>
-                        <a href="#" class="instragram-logout">Remover conta</a>
-                    </div>
-                    <div class="group">
-                        <p class="not-account">Não é Douglas Godois dos Santos</p>
-                        <p class="not-account">
-                            <span class="link-blue">Alterar Conta</span>
-                            ou
-                            <span class="link-blue">Inscreva-se</span>
-                        </p>                    
-                    </div>
-                    <div class="get-the-app">
-                        <p class="get-app">Baixe o aplicativo</p>
-                        <div class="download">
-                            <a href="" class="app-download"></a>
-                            <a href="" class="app-download"></a>
-                            <a href="" class="app-download"></a>
-                        </div>
-                    </div>
-            </div>
-        
+
+<head>
+    <title>CloneInstragram</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="./CSS/style.css" rel="stylesheet">
+    <link href="./CSS/responsive.css" rel="stylesheet">
+</head>
+
+<body>
+    <div class="instragram-wrapper">
+        <!--tela principal dividida em dois lados-->
+        <div class="instragram-phone">
+            <img src="imagens/phone.png" alt="imagem celular">
         </div>
-    
-    </body>
-</html>    
+        <div class="instragram-continus">
+            <div class="group">
+                <img src="imagens/Instagram-Logo.png" alt="logo instragram" class="instragram-logo">
+                <div class="profile-photo">
+                    <img src="./imagens/arte-douglas.jpg" alt="imagem do usuário">
+                </div>
+                <a href="#" class="instragram-login">Continue como Douglas G.dos Santos</a>
+                <a href="#" class="instragram-logout">Remover conta</a>
+            </div>
+            <div class="group">
+                <p class="not-account">Não é Douglas Godois dos Santos</p>
+                <p class="not-account">
+                    <span class="link-blue">Alterar Conta</span>
+                    ou
+                    <span class="link-blue">Inscreva-se</span>
+                </p>
+            </div>
+            <div class="get-the-app">
+                <p class="get-app">Baixe o aplicativo</p>
+                <div class="download">
+                    <a href="" class="app-download"></a>
+                    <a href="" class="app-download"></a>
+                    <a href="" class="app-download"></a>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+</body>
+
+</html>
